--- a/package.json
+++ b/package.json
@@ -19,8 +19,17 @@
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
     "@types/styled-components": "^5.1.34",
-    "eslint": "8.56.0",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
+    "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
-    "typescript": "5.3.3"
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^3.2.4",
+    "typescript": "5.3.3",
+    "typescript-eslint": "^0.0.1-alpha.0"
   }
 }
