--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "format": "next lint --fix --dir src"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.5",
+    "@mui/material": "^5.15.5",
     "next": "14.1.0",
     "react": "18.2.0",
     "react-content-loader": "^6.2.1",
